--- a/sample.yml
+++ b/sample.yml
@@ -1,7 +1,7 @@
 ---
 - name: install and deploy tomcat
   hosts: all
-  become: true
+  become: yes
   tasks:
     - name: updating to latest updates
       shell: 
