--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,20 +1,21 @@
 ---
-- hosts: all
+- name: install and deploy prometheus
+  hosts: all
   become: true
   tasks:
-  - name: Install Prometheus
-    apt:
-      name: prometheus
-      state: present
-    become: yes
-    tags:
-      - prometheus
+    - name: prometheus_installation
+      apt:
+        name: prometheus
+        state: present
+      become: yes
+      tags:
+        - prometheus
 
-  - name: Ensure Prometheus service is enabled and started
-    systemd:
-      name: prometheus
-      state: started
-      enabled: yes
-  become: yes
-  tags:
-    - prometheus
+    - name: Enable_and_start_prometheus
+      systemd:
+        name: prometheus
+        state: started
+        enabled: yes
+      become: yes
+      tags:
+        - prometheus
